      registerClass is capable of registering icons.

    - DublinCore and PortalFolder: Changed fallback in 'Type' method.
      The fallback is only necessary if the related type info is missing.

    - CMFCore.PortalContent: Wrong variable name in __call__ would blow up
      if no default view could be found for a piece of content.

  Others

    - CMFCore utils: Made _checkPermission depend on Zope's checkPermission.
      There is no longer a need to modify the checkPermission behavior in CMF.

    - TypeInformation: Removed support for old setting formats.
      If TypeInformation objects are initialized with keyword arguments,
      'actions' and 'aliases' keys have to use the format introduced in
      CMF 1.5.

    - CMFSetup and GenericSetup: Removed obsolete CMFSetup product.
      Added __module_aliases__ to support setup tools created with CMFSetup. 

    - DCWorkflow: Removed hardcoded default workflows.

    - Workflow: Removed deprecated WorkflowInformation and getActionsFor.

    - CMFCore and GenericSetup: Moved mechanisms for content export / import
      to GenericSetup/content.py, and made more generic.

    - CMFDefault: Removed PortalGenerator and manage_addCMFSite.

    - Portal Types: Removed factory_type_information data.
      TypesTool.listDefaultTypeInformation was removed, the 'fti' argument of
      utils.ContentInit and the 'typeinfo_name' argument of
      TypesTool.manage_addTypeInformation are ignored.

    - CatalogTool: A new portal_catalog is now empty.
      Removed enumerateIndexes, enumerateLexicons, enumerateColumns and
      _initIndexes. Please use the setup tool to populate the catalog.

    - CMFActionIcons, CMFCalendar and CMFTopic: Removed old install scripts.

    - Refactored and extended CMFDefault.tests.test_join so it can be easily 
      subclassed and reused for alternative membership implementations. All
      that is needed is to ovverride _createPortal to return a portal with